--- a/config/locales/pt-BR/general.pt-BR.yml
+++ b/config/locales/pt-BR/general.pt-BR.yml
@@ -4,3 +4,4 @@ pt-BR:
     value: Valor
     notice: Aviso
     notice_message: "Está invoice foi gerando no Challenge Husky e sua código de identificação é:"
+    download_pdf: Download PDF
